feat: bind CORS origins from configuration